--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/node": "^18.11.18",
     "check-code-coverage": "^1.10.4",
     "concurrently": "^7.6.0",
+    "browserify": "^17.0.0",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
