[update] chart zoom

--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "jest --coverage",
+    "test": "jest --coverage && npx update-badge coverage/coverage-summary.json",
     "test:watch": "jest --coverage --watchAll",
     "build:removeDist": "rmdir /s /q dist",
     "build:compile": "npx babel src --extensions .ts --out-dir dist --source-maps",
     "build:types": "tsc --project tsconfig.build.json",
     "build:min": "browserify dist/index.js -o dist/index.min.js",
-    "build:cra": "npm run test && npx update-badge coverage/coverage-summary.json",
     "build:demo": "tsc demo/src/index.ts --outDir demo/dist && browserify demo/dist/index.js -o demo/dist/index.min.js",
     "build": "concurrently npm:build:*",
     "watch:compile": "npx babel src --extensions .ts --out-dir dist --source-maps --watch",
